--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,52 @@
+absl-py==2.1.0
 aiodns==3.2.0
 aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.7.0
+astunparse==1.6.3
 attrs==23.2.0
+blinker==1.8.2
 cachetools==5.3.3
 certifi==2024.6.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 cryptg==0.4.0
+filelock==3.15.1
+Flask==3.0.3
+flatbuffers==24.3.25
 frozenlist==1.4.1
+fsspec==2024.6.0
+gast==0.5.4
 google-ai-generativelanguage==0.6.4
 google-api-core==2.19.0
 google-api-python-client==2.132.0
 google-auth==2.30.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.6.0
+google-pasta==0.2.0
 googleapis-common-protos==1.63.1
 grpcio==1.64.1
 grpcio-status==1.62.2
+h5py==3.11.0
 httplib2==0.22.0
+huggingface-hub==0.23.4
 idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+keras==3.3.3
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+ml-dtypes==0.3.2
 multidict==6.0.5
+namex==0.0.8
+numpy==1.26.4
+opt-einsum==3.3.0
+optree==0.11.0
+packaging==24.1
 pillow==10.3.0
 proto-plus==1.23.0
 protobuf==4.25.3
@@ -31,15 +57,31 @@ pycares==4.4.0
 pycparser==2.22
 pydantic==2.7.3
 pydantic_core==2.18.4
+Pygments==2.18.0
 pyparsing==3.1.2
 pysqlite3==0.5.3
 pytz==2024.1
+PyYAML==6.0.1
+regex==2024.5.15
 requests==2.32.3
+rich==13.7.1
 rsa==4.9
+safetensors==0.4.3
 setuptools==70.0.0
+six==1.16.0
 Telethon==1.35.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+termcolor==2.4.0
+tf_keras==2.16.0
+tokenizers==0.19.1
 tqdm==4.66.4
+transformers==4.41.2
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.1
+Werkzeug==3.0.3
+wheel==0.43.0
+wrapt==1.16.0
 yarl==1.9.4
